--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   audioplayers: ^6.5.1
   provider: ^6.1.5+1
+  http: ^1.5.0
 
 dev_dependencies:
   flutter_test:
