--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   provider: ^6.1.5+1
   http: ^1.5.0
   flutter_glass_morphism: ^1.0.2
+  loader_overlay: ^5.0.0
 
 dev_dependencies:
   flutter_test:
@@ -65,6 +66,8 @@ flutter:
     - family: BBHSansBogle
       fonts:
         - asset: resources/fonts/BBHSansBogle-Regular.ttf
+  assets:
+    - resources/images/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
