added support for resilient caching for refresh token and automatic navigation based on authentication

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   http: ^1.5.0
   flutter_glass_morphism: ^1.0.2
   loader_overlay: ^5.0.0
+  shared_preferences: ^2.5.3
 
 dev_dependencies:
   flutter_test:
